--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="col-xl-12">
                     <div class="gallery_part_item filtr-container">
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="1"
-                            style="background: url('img/gallery/gallery_item_1.png') 70% 60% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_1.jpg') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -169,7 +169,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="2"
-                            style="background: url('img/gallery/gallery_item_2.png') 70% 60% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_2.jpg') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -180,7 +180,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="3"
-                            style="background: url('img/gallery/gallery_item_3.png') 70% 60% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_3.jpg') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -191,7 +191,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="4"
-                            style="background: url('img/gallery/gallery_item_4.png') 70% 60% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_4.jpg') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -202,7 +202,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="5"
-                            style="background: url('img/gallery/gallery_item_5.png') 100% 100% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_5.jpg') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -213,7 +213,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="1"
-                            style="background: url('img/gallery/gallery_item_6.png') 100% 100% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_6.jpg') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -224,7 +224,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="2"
-                            style="background: url('img/gallery/gallery_item_7.png') 100% 100% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_7.jpg') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -235,7 +235,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="3"
-                            style="background: url('img/gallery/gallery_item_8.png') 70% 60% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_8.jpg') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -246,7 +246,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="4"
-                            style="background: url('img/gallery/gallery_item_9.png') 100% 100% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_9.jpg') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -257,7 +257,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="5"
-                            style="background: url('img/gallery/gallery_item_10.png') 100% 100% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_10.jpg') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -268,7 +268,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="1"
-                            style="background: url('img/gallery/gallery_item_11.png') 100% 100% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_11.jpg') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -279,7 +279,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="2"
-                            style="background: url('img/gallery/gallery_item_12.png') 70% 60% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_12.jpg') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -290,7 +290,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="3"
-                            style="background: url('img/gallery/gallery_item_13.png') 100% 100% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_13.jpg') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -301,7 +301,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="4"
-                            style="background: url('img/gallery/gallery_item_14.png') 70% 60% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_14.jpg') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -312,7 +312,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="5"
-                            style="background: url('img/gallery/gallery_item_15.png') 100% 100% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_15.jpg') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -323,7 +323,7 @@
                             </div>
                         </a>
                         <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="1"
-                            style="background: url('img/gallery/gallery_item_16.png') 100% 100% no-repeat; background-size: cover;">
+                            style="background: url('img/gallery/gallery_item_16.jpg') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -363,12 +363,12 @@
                         <a href="https://vk.com/bazarnyphotography" class="btn_1">Заказать через VK</a>
                     </div>
                     <div class="single_offer_img d-none d-md-block">
-                        <img src="img/single_offer_img_2.png" alt="">
+                        <img src="img/single_offer_img_2.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-6">
                     <div class="single_offer_img d-none d-md-block">
-                        <img src="img/single_offer_img_1.png" alt="">
+                        <img src="img/single_offer_img_1.jpg" alt="">
                     </div>
                     <div class="single_offer_text text-center nature">
                         <span class="flaticon-leaf"></span>
@@ -521,7 +521,7 @@
                 <div class="col-sm-6 col-lg-4">
                     <div class="single_catagory_post post_2">
                         <div class="category_post_img">
-                            <img src="img/blog/blog_1.png" alt="">
+                            <img src="img/blog/blog_1.jpg" alt="">
                         </div>
                         <div class="post_text_1 pr_30">
                             <h5><span> 500 px</span> / фотоблог</h5>
@@ -535,7 +535,7 @@
                 <div class="col-sm-6 col-lg-4">
                     <div class="single_catagory_post post_2">
                         <div class="category_post_img">
-                            <img src="img/blog/blog_2.png" alt="">
+                            <img src="img/blog/blog_2.jpg" alt="">
                         </div>
                         <div class="post_text_1 pr_30">
                             <h5><span> Photographers</span> / Украинский фото ресурс</h5>
@@ -549,7 +549,7 @@
                 <div class="col-sm-6 col-lg-4">
                     <div class="single_catagory_post post_2">
                         <div class="category_post_img">
-                            <img src="img/blog/blog_3.png" alt="">
+                            <img src="img/blog/blog_3.jpg" alt="">
                         </div>
                         <div class="post_text_1 pr_30">
                             <h5><span> VK</span> / работы в соц. сети</h5>
