--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     <link rel="stylesheet" href="css/slick.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <meta property="og:site_name" content="Фотограф Даниил Базарный">
+           <meta property="og:title" content="Фотограф. Ялта. Крым.">
+           <meta property="og:description" content="Свадебный фотограф. Помимо свадеб, я занимаюсь индивидуальной и семейной фотосъемкой, а также организовываю фотопутешевствия по Крыму, снимаю интрерьеры и многое другое">
+           <meta property="og:image" content="http://dbazarny.ru/img/banner_bg.jpg">
+           <meta property="og:url" content="http://dbazarny.ru/">
+           <meta property="og:type" content="website">
+
 </head>
 
 <body>
