--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <h5>фотографирую людей</h5>
                             <h1>Даниил<span>Базарный</span></h1>
                             <p>Художник фрагментов вашей жизни</p>
-                            <p><a href="tel:+79788646092" style="color:#ff4800"> +7 978 864 60 92 </a></p>
+                            <p><a href="tel:+79785581040" style="color:#ff4800"> +7 978 864 60 92 </a></p>
                             <br>
                             <a href="#work" class="btn_1">Посмотреть работы</a>
                         </div>
@@ -341,6 +341,95 @@
                                 </div>
                             </div>
                         </a>
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="1"
+                            style="background: url('img/gallery/gallery_item_17.jpg') 100% 100% no-repeat; background-size: cover;">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                      <p>Свадебные фото</p>
+                                      <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="5"
+                            style="background: url('img/gallery/gallery_item_18.jpg') 100% 100% no-repeat; background-size: cover;">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                      <p>Свадебные фото</p>
+                                      <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="2"
+                            style="background: url('img/gallery/gallery_item_19.jpg') 100% 100% no-repeat; background-size: cover;">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                      <p>Свадебные фото</p>
+                                      <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="3"
+                            style="background: url('img/gallery/gallery_item_20.jpg') 100% 100% no-repeat; background-size: cover;">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                      <p>Свадебные фото</p>
+                                      <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="3"
+                            style="background: url('img/gallery/gallery_item_21.jpg') 100% 100% no-repeat; background-size: cover;">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                      <p>Свадебные фото</p>
+                                      <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="5"
+                            style="background: url('img/gallery/gallery_item_22.jpg') 100% 100% no-repeat; background-size: cover;">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                      <p>Свадебные фото</p>
+                                      <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="2"
+                            style="background: url('img/gallery/gallery_item_23.jpg') 100% 100% no-repeat; background-size: cover;">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                      <p>Свадебные фото</p>
+                                      <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="3"
+                            style="background: url('img/gallery/gallery_item_24.jpg') 100% 100% no-repeat; background-size: cover;">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                      <p>Свадебные фото</p>
+                                      <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        
 
                     </div>
                 </div>
@@ -381,7 +470,7 @@
                     <div class="single_offer_text text-center nature">
                         <span class="flaticon-leaf"></span>
                         <h4>Интерьеры</h4>
-                        <p>С радостью сделаю для вас съемку как интерьеров так и экстерьеров коммерческого, жилого фонда. Обращайтесь <a href="tel:+79788646092"> +7 978 864 60 92 </a></p>
+                        <p>С радостью сделаю для вас съемку как интерьеров так и экстерьеров коммерческого, жилого фонда. Обращайтесь <a href="tel:+79785581040"> +7 978 864 60 92 </a></p>
                         <a href="https://vk.com/bazarnyphotography" class="btn_1">Заказать через VK</a>
                     </div>
                 </div>
@@ -390,7 +479,6 @@
     </section>
     <!--::our_service part end::-->
     <a name="comments"> </a>
-
 
     <!--::review_part part start::-->
     <section class="review_part">
@@ -406,25 +494,30 @@
                         <div class="review_part_text">
                             <h5>Отзыв клиента</h5>
                             <h2>Портретное фото в саду.</h2>
-                            <p>Я нашла Даниила по объявлениям на сайте и решила договориться, попробовать посниматься у него.
-                            Это моя первая фотосессия, я раньше не участвовала в таком и вообще не думала, что когда-нибудь поучаствую.
-                          Я не знала что нужно делать и как себя вести, а Даниил очень профессионально все рассказал и показал. Спасибо за хорошую работу. Мне очень понравилось. Приду еще)</p>
-                            <h3>Анна Погребная <span>домохозяйка</span> </h3>
+                            <p>Очень благодарна за самые яркие и потрясающие фотографии которые у меня были.
+                              Хочется выделить то, что даже в холодную и тусклую погоду, Даниил смог найти момент для солнца и сделать так, будто оказалась не в холодном декабре, а теплый летний день..
+                              Глаза не нарадуются просмотрами фото.
+                              Спасибо большое!!!!</p>
+                            <h3>Алина Воскобойникова<span> домохозяйка</span> </h3>
                         </div>
                         <div class="review_part_text">
                             <h5>Отзыв клиента</h5>
-                            <h2>Свадебная фотосессия для Инги и Вадима возле моря.</h2>
-                            <p>Спасибо Даниилу, что помог нам реализовать нашу мечту. Мы с мужем мечтали о хорошей фотосессии возле моря за приемлемые деньги. Даниил нам все быстро показал и объяснил. И главное это результат - фото просто космос. Так держать Даниил!</p>
-                            <h3>Инга и Вадим <span>Молодожены</span> </h3>
+                            <h2>Фото образы </h2>
+                            <p>Спонтанно решила поучаствовать в Фотопроекте "Гостья из прошлого" фотографа Даниила Базарного.
+                            Меня всегда привлекали яркие 💃 вещи из прошлого, но позволить себе так разодеться я могла только на экстрим выездах, где меня называли и фитнес тренером 💁, и грабительницей бабушкиного сундука 🗃 😆
+                            Было забавно и весело ходить в таком виде по городу среди всё ещё серых людей не проснувшихся после зимы.
+                            Отдельно хочется выделить комфортность работы с фотографом. До встречи были небольшие волнения, ведь очень важно быть на одной волне с фотографом. Но Даниил приятный дружелюбный человек умеющий располагать к себе и создавать непринуждённую атмосферу! А это ой как важно в его сфере работы!) 👆 Я просто была сама собой, дурачилась, а мастер делал своё дело!
+                            Очень порадовал результат работы! Столько крутых снимков, что глаза разбегались какие выбрать! Поснимали чуть в 80-х и обратно в 2017-й.
+                            Спасибо за продуктивное сотрудничество!) Приятно было познакомиться! Буду рада поучаствовать в осуществлении новых идей и образов! 😊</p>
+                            <h3>Анастасия Колесникова<span> домохозяйка</span> </h3>
                         </div>
                         <div class="review_part_text">
                             <h5>Отзыв клиента</h5>
-                            <h2>Модельное фото для сайта.</h2>
-                            <p>Я бизнессмен и мне необходимы видовые фотографии для соц. сетей и на разные публичные сайты. Деньги есть, а время нет. Нашел на Авито фотографа Даниила и в тот же день отсняли фотосет. Фото мне подошли и главное что все быстро и четко. Спасибо и успехов в бизнессе!</p>
-                            <h3>Игорь Борисов <span>CEO of softking</span> </h3>
+                            <h2>Модельное фото для сайта</h2>
+                            <p>Дэн, спасибо за помощь в воплощении моих задумок! Теперь я точно знаю, что благодаря тебе у меня получится реализовать свои гениальные идеи :)) Хорошо, когда ты с фотографом на одной волне!</p>
+                            <h3>КриСтина Балясная<span> CEO of softking</span> </h3>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -444,6 +537,9 @@
                     </div>
                 </div>
             </div>
+
+
+
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_pricing_part">
@@ -452,17 +548,16 @@
                             <p>Свадьба</p>
                         </div>
                         <div class="pricing_content">
-                            <h3>от 2000р. <span>/ час(2+)</span></h3>
+                            <h3>от 2500р. <span>/ час(2+)</span></h3>
                             <ul>
-                                <li>Выбор места</li>
-                                <li>Сотрудничество с визаж, стилист и др.</li>
-                                <li>Возможен выезд за город</li>
-                                <li>От сборов невесты до первого танца</li>
-                                <li>Индивидуальное колличество фото</li>
-                                <li>Фото через файлообменник</li>
+                                <li>Снимаю от 2х часов до Целого дня</li>
+                                <li>Сотрудничаю с лучшими визажистами</li>
+                                <li>Помощь в выборе локации</li>
+                                <li>Выезд в любую точку Крыма</li>
+                                <li>Индивидуальное Колличество Фото</li>
 
                             </ul>
-                            <a href="tel:+79788646092" class="btn_2">Заказать</a>
+                            <a href="tel:+79785581040" class="btn_2">Заказать</a>
                         </div>
                     </div>
                 </div>
@@ -473,16 +568,15 @@
                             <p>Портрет</p>
                         </div>
                         <div class="pricing_content">
-                            <h3>от 1500р. <span>/ час(2+)</span></h3>
+                            <h3>от 2000р. <span>/ час(2+)</span></h3>
                             <ul>
-                              <li>Консультация по образу</li>
+                              <li>Консультация По Образу</li>
                               <li>мин 1 час (2000р.)</li>
-                              <li>Уроки позирования</li>
-                              <li>10 обработанных + все остальные</li>
-                              <li>Удаленное редактирование</li>
-                              <li>Легкие правки после</li>
-                            </ul>
-                            <a href="tel:+79788646092" class="btn_2">Заказать</a>
+                              <li>Помощь в Позировании</li>
+                              <li>Уникалальные локации</li>
+                              <li>Отдаю все резкие фото со съёмки</li>
+                             </ul>
+                            <a href="tel:+79785581040" class="btn_2">Заказать</a>
                         </div>
                     </div>
                 </div>
@@ -490,19 +584,18 @@
                     <div class="single_pricing_part">
                         <div class="pricing_tittle">
                             <img src="img/icon/feature_icon_3.svg" alt="">
-                            <p>Пейзаж</p>
+                            <p>Фотопутешествие</p>
                         </div>
                         <div class="pricing_content">
-                            <h3>от 1000р <span>/ час, штука</span></h3>
+                            <h3>от 3000р <span>/ час</span></h3>
                             <ul>
-                                <li>Выезд на место съемки</li>
-                                <li>Подготовка места съемки</li>
-                                <li>Ретушь фото</li>
-                                <li>Колличество фото индивидуально</li>
-                                <li>Дневные Ночные режимы</li>
-                                <li>Фото с воздуха по заказу</li>
-                            </ul>
-                            <a href="tel:+79788646092" class="btn_2">Заказать</a>
+                                <li>Индивидуальная выездная фотосессия</li>
+                                <li>Авторские маршруты</li>
+                                <li>Уникальные места</li>
+                                <li>Сезонные съёмки (маковые поля, лавандовые и тд.)</li>
+                                <li>Ретушь фотографий</li>
+                             </ul>
+                            <a href="tel:+79785581040" class="btn_2">Заказать</a>
                         </div>
                     </div>
                 </div>
@@ -585,7 +678,7 @@
                         <h4>Контакты</h4>
                         <p>Я живу в городе Ялта. Крым.</p>
                         <ul>
-                            <li><a href="tel:+79788646092"><i class="ti-mobile"></i>+7 978 864 60 92</a></li>
+                            <li><a href="tel:+79785581040"><i class="ti-mobile"></i>+7 978 864 60 92</a></li>
                             <li><a href="mailto:dankirova@yandex.ru"><i class="ti-email"></i>dankirova@yandex.ru</a></li>
                             <li><a href="#"><i class="ti-world"></i>http://dbazarny.ru/</a></li>
                         </ul>
@@ -631,6 +724,7 @@
 
                         </div>
                         <div class="social_icon">
+                            <a href="https://vk.com/bazarnyphotography" target="_blank"> <img src="img/icon/vk.svg"> </a>
                             <a href="https://www.facebook.com/dan.bazarny" target="_blank"> <i class="ti-facebook"></i> </a>
                             <a href="#"> <i class="ti-twitter-alt"></i> </a>
                             <a href="https://www.instagram.com/danbazarnyphotography/" target="_blank"> <i class="ti-instagram"></i> </a>
