--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                     <a class="nav-link" href="#market" onclick="push()">Предложения</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#comments" onclick="push()">Комментарии</a>
+                                    <a class="nav-link" href="#comments" onclick="push()">Отзывы</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#price" onclick="push()">Цены</a>
@@ -104,7 +104,7 @@
                             <h5>фотографирую людей</h5>
                             <h1>Даниил<span>Базарный</span></h1>
                             <p>Художник фрагментов вашей жизни</p>
-                            <p><a href="tel:+79785581040" style="color:#ff4800"> +7 978 558 10 40 </a></p>
+                            <p><a href="tel:+79785581040" class="btn_2"> +7 978 558 10 40 </a></p>
                             <br>
                             <a href="#work" class="btn_1">Посмотреть работы</a>
                         </div>
@@ -124,9 +124,8 @@
                     <div class="about_us_text text-center">
 
                         <h5>от автора</h5>
-                        <h2>Камера это инструмент при помощи которого я раскрываю в людях чувства</h2>
-                        <p>Приветствую вас на моём сайте. Меня зовут Даниил, я свадебный фотограф в Ялте и по Крыму.
-Помимо свадеб, я занимаюсь индивидуальной и семейной фотосъемкой, а также организовываю фотопутешевствия по Крыму, снимаю интрерьеры и многое другое. Моя задача помочь людям увидеть себя красивыми.</p>
+                        <h2>КАМЕРА - ЭТО ИНСТРУМЕНТ, ПРИ ПОМОЩИ КОТОРОГО Я РАСКРЫВАЮ В ЛЮДЯХ ЧУВСТВА</h2>
+                        <p>Приветствую вас на моём сайте. Меня зовут Даниил, я свадебный фотограф в Ялте и по Крыму. Помимо свадеб, я занимаюсь индивидуальной и семейной фотосъемкой, а также организовываю фотопутешествия по Крыму, снимаю интерьеры и многое другое. Моя задача - помочь людям увидеть себя красивыми.</p>
                         <a href="#work" class="btn_2">мои работы</a>
                     </div>
                 </div>
@@ -144,7 +143,7 @@
                 <div class="col-lg-5 offset-lg-2">
                     <div class="section_tittle">
                         <p>цель автора</p>
-                        <h2>Фотография это жизнь</h2>
+                        <h2>ФОТОГРАФИЯ - ЭТО ЖИЗНЬ</h2>
                     </div>
                 </div>
             </div>
@@ -357,7 +356,7 @@
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
-                                      <p>Свадебные фото</p>
+                                      <p>Интерьеры</p>
                                       <h4>Больше фотографий посмотреть здесь</h4>
                                     </div>
                                 </div>
@@ -368,7 +367,7 @@
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
-                                      <p>Свадебные фото</p>
+                                      <p>Поездки в горы Крыма</p>
                                       <h4>Больше фотографий посмотреть здесь</h4>
                                     </div>
                                 </div>
@@ -379,7 +378,7 @@
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
-                                      <p>Свадебные фото</p>
+                                      <p>Фотографии для актеров театра и кино</p>
                                       <h4>Больше фотографий посмотреть здесь</h4>
                                     </div>
                                 </div>
@@ -390,7 +389,7 @@
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
-                                      <p>Свадебные фото</p>
+                                      <p>Веселые портреты унылым бабам</p>
                                       <h4>Больше фотографий посмотреть здесь</h4>
                                     </div>
                                 </div>
@@ -401,7 +400,7 @@
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
-                                      <p>Свадебные фото</p>
+                                      <p>Интерьеры</p>
                                       <h4>Больше фотографий посмотреть здесь</h4>
                                     </div>
                                 </div>
@@ -412,13 +411,13 @@
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
-                                      <p>Свадебные фото</p>
+                                      <p>Фотопоездка в горы и на море</p>
                                       <h4>Больше фотографий посмотреть здесь</h4>
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="3"
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="1"
                             style="background: url('img/gallery/gallery_item_24.jpg') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
@@ -447,7 +446,7 @@
                 <div class="col-lg-6">
                     <div class="section_tittle">
                         <p>популярно</p>
-                        <h2>Популярые предожения</h2>
+                        <h2>ПОПУЛЯРНЫЕ ПРЕДЛОЖЕНИЯ</h2>
                     </div>
                 </div>
             </div>
@@ -498,7 +497,7 @@
                               Хочется выделить то, что даже в холодную и тусклую погоду, Даниил смог найти момент для солнца и сделать так, будто оказалась не в холодном декабре, а теплый летний день..
                               Глаза не нарадуются просмотрами фото.
                               Спасибо большое!!!!</p>
-                            <h3>Алина Воскобойникова<span> домохозяйка</span> </h3>
+                            <h3>Алина Воскобойникова<span></span> </h3>
                         </div>
                         <div class="review_part_text">
                             <h5>Отзыв клиента</h5>
@@ -509,13 +508,13 @@
                             Отдельно хочется выделить комфортность работы с фотографом. До встречи были небольшие волнения, ведь очень важно быть на одной волне с фотографом. Но Даниил приятный дружелюбный человек умеющий располагать к себе и создавать непринуждённую атмосферу! А это ой как важно в его сфере работы!) 👆 Я просто была сама собой, дурачилась, а мастер делал своё дело!
                             Очень порадовал результат работы! Столько крутых снимков, что глаза разбегались какие выбрать! Поснимали чуть в 80-х и обратно в 2017-й.
                             Спасибо за продуктивное сотрудничество!) Приятно было познакомиться! Буду рада поучаствовать в осуществлении новых идей и образов! 😊</p>
-                            <h3>Анастасия Колесникова<span> домохозяйка</span> </h3>
+                            <h3>Анастасия Колесникова<span></span> </h3>
                         </div>
                         <div class="review_part_text">
                             <h5>Отзыв клиента</h5>
                             <h2>Модельное фото для сайта</h2>
                             <p>Дэн, спасибо за помощь в воплощении моих задумок! Теперь я точно знаю, что благодаря тебе у меня получится реализовать свои гениальные идеи :)) Хорошо, когда ты с фотографом на одной волне!</p>
-                            <h3>КриСтина Балясная<span> CEO of softking</span> </h3>
+                            <h3>КриСтина Балясная<span> </span> </h3>
                         </div>
                     </div>
                 </div>
@@ -532,7 +531,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section_tittle">
-                        <p>популярные предложения</p>
+                        <p>ПОПУЛЯРНЫЕ ПРЕДЛОЖЕНИЯ</p>
                         <h2>Фото себе или в подарок</h2>
                     </div>
                 </div>
@@ -554,7 +553,7 @@
                                 <li>Сотрудничаю с лучшими визажистами</li>
                                 <li>Помощь в выборе локации</li>
                                 <li>Выезд в любую точку Крыма</li>
-                                <li>Индивидуальное Колличество Фото</li>
+                                <li>Индивидуальное Количество Фото</li>
 
                             </ul>
                             <a href="tel:+79785581040" class="btn_2">Заказать</a>
@@ -627,9 +626,9 @@
                         <div class="post_text_1 pr_30">
                             <h5><span> 500 px</span> / фотоблог</h5>
                             <a href="https://500px.com/danbazarnyphotography" target="_blank">
-                                <h3>коллекция работ на известном европейсоком сайте</h3>
+                                <h3>КОЛЛЕКЦИЯ РАБОТ НА ИЗВЕСТНОМ ЕВРОПЕЙСКОМ САЙТЕ</h3>
                             </a>
-                            <p>Здесь представлены тематические портретные фото работы. Фотосессии в интереных местах и окрестностях Ялты.</p>
+                            <p>Здесь представлены тематические портретные фотоработы. Фотосессии в интересных местах и окрестностях Ялты.</p>
                         </div>
                     </div>
                 </div>
@@ -643,7 +642,7 @@
                             <a href="https://photographers.ua/Daniil1/" target="_blank">
                                 <h3>Работы для более узкого круга знакомых</h3>
                             </a>
-                            <p>Это тематический ресурс на которм я имею возможность общаться с коллегами из Украины.</p>
+                            <p>Это тематический ресурс на котором я имею возможность общаться с коллегами.</p>
                         </div>
                     </div>
                 </div>
@@ -657,7 +656,7 @@
                             <a href="https://vk.com/bazarnyphotography" target="_blank">
                                 <h3>vk для связи со мной</h3>
                             </a>
-                            <p>Здесь можно посмотреть на новые фотографии, а так же узнать все необходимые вопросы. </p>
+                            <p>Здесь можно посмотреть на новые фотографии, а также узнать все необходимые вопросы. </p>
                         </div>
                     </div>
                 </div>
