правки по тексту

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
-                                      <p>Веселые портреты унылым бабам</p>
+                                      <p>Веселые портреты красивым девушкам</p>
                                       <h4>Больше фотографий посмотреть здесь</h4>
                                     </div>
                                 </div>
