--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                               <li>Консультация По Образу</li>
                               <li>мин 1 час (2000р.)</li>
                               <li>Помощь в Позировании</li>
-                              <li>Уникалальные локации</li>
+                              <li>Уникальные локации</li>
                               <li>Отдаю все резкие фото со съёмки</li>
                              </ul>
                             <a href="tel:+79785581040" class="btn_2">Заказать</a>
@@ -656,7 +656,7 @@
                             <a href="https://vk.com/bazarnyphotography" target="_blank">
                                 <h3>vk для связи со мной</h3>
                             </a>
-                            <p>Здесь можно посмотреть на новые фотографии, а также узнать все необходимые вопросы. </p>
+                            <p>Здесь можно посмотреть на новые фотографии, а также получить ответы на любые вопросы.</p>
                         </div>
                     </div>
                 </div>
