--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                     <div class="review_slider owl-carousel">
                         <div class="review_part_text">
                             <h5>Отзыв клиента</h5>
-                            <h2>Портретное фото в саду.</h2>
+                            <h2>Портретная фотосессия в Гурзуфе</h2>
                             <p>Очень благодарна за самые яркие и потрясающие фотографии которые у меня были.
                               Хочется выделить то, что даже в холодную и тусклую погоду, Даниил смог найти момент для солнца и сделать так, будто оказалась не в холодном декабре, а теплый летний день..
                               Глаза не нарадуются просмотрами фото.
@@ -501,18 +501,13 @@
                         </div>
                         <div class="review_part_text">
                             <h5>Отзыв клиента</h5>
-                            <h2>Фото образы </h2>
-                            <p>Спонтанно решила поучаствовать в Фотопроекте "Гостья из прошлого" фотографа Даниила Базарного.
-                            Меня всегда привлекали яркие 💃 вещи из прошлого, но позволить себе так разодеться я могла только на экстрим выездах, где меня называли и фитнес тренером 💁, и грабительницей бабушкиного сундука 🗃 😆
-                            Было забавно и весело ходить в таком виде по городу среди всё ещё серых людей не проснувшихся после зимы.
-                            Отдельно хочется выделить комфортность работы с фотографом. До встречи были небольшие волнения, ведь очень важно быть на одной волне с фотографом. Но Даниил приятный дружелюбный человек умеющий располагать к себе и создавать непринуждённую атмосферу! А это ой как важно в его сфере работы!) 👆 Я просто была сама собой, дурачилась, а мастер делал своё дело!
-                            Очень порадовал результат работы! Столько крутых снимков, что глаза разбегались какие выбрать! Поснимали чуть в 80-х и обратно в 2017-й.
-                            Спасибо за продуктивное сотрудничество!) Приятно было познакомиться! Буду рада поучаствовать в осуществлении новых идей и образов! 😊</p>
-                            <h3>Анастасия Колесникова<span></span> </h3>
+                            <h2>Свадьба Диана и Александр</h2>
+                            <p>Хотим в свою очередь сказать огромное спасибо профи своего дела Даниилу спасибо, что помог воплотить нашу мечту в реальность и провести потрясающую Свадебную фотосессию!</p>
+                            <h3>Александр и Диана<span></span> </h3>
                         </div>
                         <div class="review_part_text">
                             <h5>Отзыв клиента</h5>
-                            <h2>Модельное фото для сайта</h2>
+                            <h2>Индивидуальная фотосессия</h2>
                             <p>Дэн, спасибо за помощь в воплощении моих задумок! Теперь я точно знаю, что благодаря тебе у меня получится реализовать свои гениальные идеи :)) Хорошо, когда ты с фотографом на одной волне!</p>
                             <h3>КриСтина Балясная<span> </span> </h3>
                         </div>
